[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/weapon_bullet.png" type="Texture" id=1]
[ext_resource path="res://assets/gun-shot-1-7069.mp3" type="AudioStream" id=2]
[ext_resource path="res://Bullet.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 9, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 27, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 9, 8 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 8.0

[node name="Bullet" type="Area2D"]
collision_mask = 10
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 8 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 0 )
shape = SubResource( 9 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5, 0 )
scale = Vector2( 0.5, 0.9 )

[node name="gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="gunshot" to="." method="_on_gunshot_finished"]
